--- a/templates/base.htm
+++ b/templates/base.htm
@@ -63,7 +63,7 @@
                                 <a class="nav-link active" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">Create New Link</a>
+                                <a class="nav-link" href="createurl.htm">Create New Link</a>
                             </li>
                         </ul>
 
