add redirect view

--- a/templates/createurl.htm
+++ b/templates/createurl.htm
@@ -1,4 +1,4 @@
- {% extends 'base.html' %} {% block content %}
+ {% extends 'base.htm' %} {% block content %}
 <div class="container">
     <form method="POST" action="/create/">
         {% csrf_token %} {{ form.as_p }}
