--- a/templates/notfound.htm
+++ b/templates/notfound.htm
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.htm' %} {% block content %}
 <center>
     <h1>Error: Page Not Found :(</h1>
     <a href="/"><button type="button" class="btn btn-info ml-3 mr-3"
