--- a/templates/res.htm
+++ b/templates/res.htm
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.htm' %} {% block content %}
 <center>
+    <br>
+    <br>
+    <br>
     <h2>URL: "{{ obj.original_url }}"</h2>
     <h6>Your Request: "{{ obj.short_url }}"</h6>
     <a href="{{ obj.original_url }}"><button type="button" class="btn btn-primary">Go To Website</button></a>
