--- a/templates/urlcreated.htm
+++ b/templates/urlcreated.htm
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.htm' %} {% block content %}
 <center>
     <div class="alert alert-primary" role="alert">
         <h1>Your Short URL: "domain.com/{{ chars }}"</h1>
