--- a/templates/base.htm
+++ b/templates/base.htm
@@ -6,45 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/TechNotebookYT/Tutorial-Files/master/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!----link css file-->
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{%static 'style.css'%}">
     <title>Url Shortener</title>
 
-    <style>
-        #page-container {
-            position: relative;
-            min-height: 100vh;
-        }
-        
-        #content-wrap {
-            padding-bottom: 2.5rem;
-            /* Footer height */
-        }
-        
-        #footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 4.0rem;
-            /* Footer height */
-        }
-        /*navbar*/
-        
-        nav.navbar .navbar-brand {
-            color: rgb(255, 246, 246);
-            font-size: 1.4rem;
-        }
-        
-        nav.navbar {
-            z-index: 99999;
-            background-color: rgba(27, 26, 26, 0.5);
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 70px;
-            line-height: 60px;
-            box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2)
-        }
-    </style>
+
 </head>
 
 <body>
@@ -53,17 +20,17 @@
             <!--nav bar-->
             <nav id="header-nav" class="navbar navbar-expand-lg navbar-light fixed-top">
                 <div class="container-fluid test">
-                    <a class="navbar-brand" href="#">URL Shotner</a>
+                    <a class="navbar-brand" href="/">URL Shotner</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">Home</a>
+                                <a class="nav-link active" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="createurl.htm">Create New Link</a>
+                                <a class="nav-link" href="/create/">Create New Link</a>
                             </li>
                         </ul>
 
