--- a/templates/createurl.htm
+++ b/templates/createurl.htm
@@ -1,5 +1,5 @@
  {% extends 'base.htm' %} {% block content %}
-<div class="container">
+<div class="container jumbotron">
     <form method="POST" action="/create/">
         {% csrf_token %} {{ form.as_p }}
         <center><button type="submit" class="btn btn-success">Create URL</button></center>
