--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,18 +1,12 @@
 {% extends 'base.htm' %} {% block content %}
 <br>
 <br>
-<div class="jumbotron">
+<div class="jumbotron text-center align-items-center">
     <center>
-        <h1>URLShort Url Shortener</h1>
-        <a href="/create/"><button type="button" class="btn btn-secondary">Create New URL</button></a>
+        <h1>Url Shortener</h1>
+        <a href="/create/"><button type="button" class="btn btn-success">Create New URL</button></a>
     </center>
 </div>
 
-<div class="jumbotron">
-    <center>
-        <h3>My Projects</h3>
-        <a><button type="button"
-                class="btn btn-primary">Here</button></a>
-    </center>
-</div>
+
 {% endblock content %}
