--- a/templates/notfound.htm
+++ b/templates/notfound.htm
@@ -1,8 +1,8 @@
 {% extends 'base.htm' %} {% block content %}
-<center>
+<div class="jumbotron">
     <h1>Error: Page Not Found :(</h1>
     <a href="/"><button type="button" class="btn btn-info ml-3 mr-3"
             style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Home</button></a>
     <a href="/"><button type="button" class="btn btn-dark ml-3 mr-3">Create New URL</button></a>
-</center>
+</div>
 {% endblock content %}
