--- a/templates/urlcreated.htm
+++ b/templates/urlcreated.htm
@@ -1,7 +1,7 @@
 {% extends 'base.htm' %} {% block content %}
-<center>
+<div class="jumbotron">
     <div class="alert alert-primary" role="alert">
-        <h1>Your Short URL: "domain.com/{{ chars }}"</h1>
+        <h1>Your Short URL: "kobz.com/{{ chars }}"</h1>
     </div>
-</center>
+</div>
 {% endblock content %}
