add footer with style page

--- a/templates/base.htm
+++ b/templates/base.htm
@@ -44,6 +44,8 @@
         <footer id="footer">
             <center>
                 <h5>URL_Short by <a>Kobz</a></h3>
+                    <h6>&copy; kobzpik project 2021</h6>
+
             </center>
         </footer>
     </div>
