--- a/static/style.css
+++ b/static/style.css
@@ -5,15 +5,6 @@
 
 #content-wrap {
     padding-bottom: 2.5rem;
-    /* Footer height */
-}
-
-#footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 4.0rem;
-    /* Footer height */
 }
 
 
@@ -37,16 +28,26 @@ nav.navbar {
 }
 
 
-/*index page*/
+/*templa page(page content)*/
 
 .jumbotron {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 850px;
+    max-width: 80%;
     width: 100%;
     background: #fff;
     padding: 25px;
     border-radius: 5px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 4.0rem;
+    background-color: rgb(131, 127, 129);
+    padding-top: 10px;
+    /* Footer height */
 }
