--- a/templates/urlcreated.htm
+++ b/templates/urlcreated.htm
@@ -3,5 +3,16 @@
     <div class="alert alert-primary" role="alert">
         <h1>Your Short URL: "kobz.com/{{ chars }}"</h1>
     </div>
+    <p>Follow folowing step for accessing the URL using URL Shotner app
+        <ol>
+            <li>Copy generated code from above Short URL<br>
+                <p>Ex:-"kobz.com/yJcmmM", you need to copy <span style="color: blue;">yJcmmM</span></p>
+            </li>
+            <li>Past into the browser Url
+                <p>Ex:-http://127.0.0.1:8000/<span style="color: blue;">yJcmmM</span>/</p>
+    </p>
+    </li>
+    </ol>
+    </p>
 </div>
 {% endblock content %}
